# augur

./: #deploy.py#  -3249  .badword-test.txt.swp  .docker-setup.sh  .dockerignore  .env.sample  .gitattributes  .gitignore  .gitmodules  .merge_file_wgRWaT  .pylintrc  .readthedocs.yml  .travis.yml  .wslrun  222.repos.md  BackendInstanceLink.md  CITATION.cff  CLASS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN_DOCUMENTATION.docx  DEV-GUIDE.md  Dockerfile  GOGGINS_READ_THIS.txt  INSTALL.sh  Initial Descriptive Stats Within Repositories for Pilot.ipynb  InstanceLinks.md  LICENSE  MAINTAINERS.md  MANIFEST.in  METHOD_STUBS_CLASS_SIGNATURES.docx  MacSteps.md  Mailing_List.csv  Makefile  Messages.csv  New-Readme.md  OBSTACLES.md  PROGRESS_REPORT.md  PULL_REQUEST_TEMPLATE.md  (+149 more)
.github/: CODEOWNERS  SECURITY_ADVISORY_TEMPLATE.md  config.yml  labeler.yml  localbranch.md  pull_request_template.md  release-drafter.yml
Ali Dowlatshahi Final/: README-my-contribution.md
Augur_Muskellunge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Awchmt/: README-my-contribution.md  contributor.py  issue.py  routes.py  test_contributor_functions.py  test_contributor_routes.py  test_issue_functions.py  test_issue_routes.py
Badgers/: DESIGN_DOCUMENTATION.docx  INSTALLATION_INSTRUCTIONS  PROGRESS_REPORT.md  REQ_AND_USECASE.docx  TESTING_PLAN.docx  badgers-graphs.html  repos-badgers-graphs.html
BlueDevils/: test.txt
Bms67r/: README-my-contribution.md
CCRWY5/: README-my-contribution.md
Cnhfg6/: README-my-contribution.md
Glgw7/: README-my-contribution.md  Sprint-2-README.md  Sprint-3-README.md
Group12/: README.md
JTBD4K/: README-my-contribution.md
KMVK6/: README-my-contribution.md
Mbpxc4FinalAssignment/: ContributionCode.md  my-contribution.md
MyContributions/: README-my-contribution.md
Notebooks/: Initial Descriptive Stats Within Repositories for Pilot.ipynb
Pawprint - DJMVY7/: README-my-contribution.md
Pawprint DJMVY7/: README-my-contribution.md
Rp522/: README-my-contribution.md
Sprint 2 Submission/: HelloWorldNB.ipynb.json  README.md  progressReport.md
Sprint1/: SErequirements.xlsx  group1readme.md  progressReport  readme.md
Sprint2/: README  progressReport  readme.md
Sprint3/: README
Sprint3ProjectSourceCode/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.base.json
Sprint4/: README
Terrapins/: terrapins.txt
WFGHD/: README-my-contribution.md
Wildcats Project/: README.md
ZBS25D/: README-my-contribution.md  README.md
ajw3p8/: README-my-contribution.md
al4k6Folder/: README-my-contribution.md
api/: application.py  gunicorn.py  server.py
augur/: AugurLogger.py  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.app  Formatter310.py  LICENSE  LogHandlerFactory.py  LoggerFactory.py  PiperReader 4.py  PiperReader 8.py  PiperReader.py  Piper_reader.py  README.md  __init__.py  application.py  augurplugin.py  certificate.md  config-random-fail.py  config.profanity.py  config.py  database-compose.yml  db_models.py  default.config.json  deploy.py  docker-compose.yml  docker-entrypoint.sh  downloads.py  entrypoint.sh  facade.py  ghtorrent.py  ghtorrent.py.orig  ghtorrentplus.py  git.py  githubapi.py  githubapi.py.orig  gsoc-interest.md  gunicorn.py  housekeeper.py  librariesio.py  localbranch.md  (+23 more)
augur-new/: .dockerignore  .gitignore  docker-compose.prod.yml  readthedocs.yml
augur_db/: engine.py
augur_env/: pyvenv.cfg
augur_new/: AugurUUID.py  __init__.py  augur_config.py  augur_logging.py  celery.py  config.py  db_config.py  db_models.py  github_paginator.py  gunicorn.py  housekeeper.py  main.py  new_db_config.py  oauth_key_manager.py  random_key_auth.py  server.py  setup.py  tasks.py  worker_base.py  wsgi.py
augur_view/: README.md  augur_view.py  config.yml  gunicorn.conf  init.py  installing.md  modules.md  reports.yml  requirements.txt  run.sh  url_converters.py  utils.py  wsgi.py
augurface/: .gitignore  DevReadme.md  DevTodo.txt  README.md  babel.config.js  package-lock.json  package.json  vue.config.js
bdwt5/: README-my-contribution.md  README.md  update_worker.py
bulldogs/: ProgressReport.md
busFactor/: pythonBlameAuthorEmail.py  pythonBlameLinesInRepo.py
cli/: __init__.py  _multicommand.py  backend.py  config-db.py  config.py  db.py
deliverables/: UseCase-PullRequestDataVisualization.docx  deliverables for sprint1
designdocs/: Software Engineering Group 6 Sprint 2 Design.md  navigation.drawio  repository page.drawio
dnh26b/: README-my-Contribution.md
docker/: uwsgi.ini
docs/: 8knot.md  Makefile  README.md  To-Do.md  apidoc.json  architecture.md  augur-0.5.0.ndm2  augur.0.21.0.release-notes.md  batch_requests.md  deployment.md  dev-guide-pt1.md  dev-guide-pt2.md  dev-install.md  dev-install.md~HEAD  dev-osx-install.md  docker-install.md  fedora-install.md  ghtorrent-restore.md  how_to_run_augur_in_production.md  index.html  install-ghdata.sh  install-msr.sh  install-wsl.md  macOS_SetUp.md  macOS_Setup_instructions.md  metrics-status.md  new-install-archive.md  new-install-osx.md  new-install-ubuntu-20.x.md  new-install-ubuntu-22.x.md  new-install-ubuntu-python-3.10.md  new-install.md  new-install.rst  onboarding.md  project-growth-maturity-decline.rst  pull_request_template.md  queries.md  rabbitmq-troubleshooting.md  repolist-example.md  requirements.txt  (+4 more)
dwrvzz/: README-my-contribution.md
esb7cp/: README-my-contribution.md
examples/: contributor-classification.ipynb
finalExam/: README-my-contribution.md
frontend/: .babelrc  .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  README.md  angular.json  brunch-config.coffee  brunch-config.js  brunch-server.js  frontend.config.json  index.html  karma.conf.js  package-lock.json  package.json  package.json.old  server.js  tsconfig.json  tslint.json  variables.env  vite.config.ts
frontend-next/: .babelrc  brunch-config.js  package-lock.json  package.json
ghdata/: __init__.py  cli.py  downloads.py  ghdata.py  ghtorrent.py  ghtorrent.py.rej  githubapi.py  librariesio.py  localcsv.py  publicwww.py  (+2 more)
(+3682 files in other folders)
