[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augur"
requires-python = ">=3.9"
dynamic = ["version"]
description = "Python 3 package for free/libre and open-source software community metrics, models & data collection"
readme = "README.md"
authors = [
    { name = "Derek Howard", email = "derek@howderek.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "alembic==1.8.1",
    "Beaker==1.11.0",
    "blinker==1.4",
    "bokeh==2.0.2",
    "boto3==1.17.57",
    "bs4==0.0.1",
    "celery==5.2.7",
    "click==8.0.3",
    "cloudpickle>=0.2.2",
    "coloredlogs==15.0",
    "dask>=2021.6.2",
    "distributed>=2021.03.0",
    "dnspython==2.6.1",
    "emoji==1.2.0",
    "eventlet==0.35.2",
    "flask==2.0.2",
    "flask-cors==4.0.1",
    "flask-login==0.5.0",
    "flask-wtf==1.0.0",
    "flask_graphql",
    "flower==2.0.1",
    "fsspec>=0.6.0",
    "gensim>=4.2.0",
    "graphene",
    "graphene_sqlalchemy",
    "gunicorn==22.0.0",
    "h5py==3.10.0",
    "httpx==0.23.0",
    "itsdangerous==2.0.1",
    "Jinja2~=3.0.3",
    "joblib==1.2.0",
    "keras>=2.15.0",
    "keras-preprocessing",
    "matplotlib>=3.5.1",
    "mdpdf==0.0.18",
    "mistune",
    "nltk==3.6.6",
    "numpy==1.26.0",
    "pandas==1.5.3",
    "partd>=0.3.10",
    "protobuf<3.22",
    "psutil==5.8.0",
    "psycopg2-binary==2.9.9",
    "pylint==2.15.5",
    "python-crfsuite>=0.9.8",
    "pyYaml",
    "redis==4.3.3",
    "requests==2.32.0",
    "scikit-image==0.19.1",
    "scikit-learn==1.5.0",
    "scipy>=1.10.0,<1.13.0",
    "seaborn==0.11.1",
    "selenium==3.141.0",
    "sendgrid",
    "six==1.15.0",
    "sklearn==0.0",
    "sklearn-crfsuite>=0.3.6",
    "slack==0.0.2",
    "SQLAlchemy==2.0.22",
    "tabulate==0.8.9",
    "tenacity==8.3.0",
    "tensorflow==2.15.0",
    "textblob==0.15.3",
    "textual>=0.73.0",
    "toml",
    "toolz>=0.8.2",
    "tornado==6.4.1",
    "typing-extensions==4.7.1",
    "Werkzeug~=2.0.0",
    "wheel",
    "xgboost==1.4.2",
    "xlrd==2.0.1",
    "xlsxwriter==1.3.7",
]

[dependency-groups]
dev = [
    "tox==3.24.4",
    "pytest==6.2.5",
    "toml>=0.10.2",
    "ipdb==0.13.9",
    "sphinx==7.2.6",
    "sphinx_rtd_theme==2.0.0",
    "sphinxcontrib-openapi==0.8.3",
    "sphinxcontrib-redoc==1.6.0",
    "docutils==0.20.1"
]

[project.scripts]
augur = "augur.application.cli._multicommand:run"

[project.urls]
Homepage = "https://github.com/chaoss/augur"
Documentation = "https://oss-augur.readthedocs.io/en/main/"


############################################################
## setuptools options
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "metadata.__version__" }

[tool.setuptools.packages.find]
# Note: While this should just be where = ["augur"], that doesn't allow the
# dynamic version lookup to work. `uv lock` will fail with:
#   ModuleNotFoundError: metadata
where = ["."]
include = [
    "augur*",
    "keyman*",
]
